--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -55,24 +55,23 @@
 }
 
 #bottom-child01 {
+  position: relative;
   width: 400px;
   height: 100px;
   background-color: #e5dcf0;
 }
 
 #bottom-child02 {
-  position: absolute;
-  top: 100px;
-  left: 200px;
+  position: relative;
+  left:200px;
   width: 400px;
   height: 100px;
   background-color: #e5dcf0;
 }
 
 #bottom-child03 {
-  position: absolute;
-  top: 200px;
-  left: 400px;
+  position: relative;
+  left:400px;
   width: 400px;
   height: 100px;
   background-color: #e5dcf0;
